// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_app should match snapshot  1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": null,
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConnectWrapper
    success={false}
  />
  <Container />
</Provider>
`;

exports[`_app should match snapshot if error occurs 1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": null,
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConnectWrapper
    error={
      Object {
        "statusCode": 400,
      }
    }
  />
  <Container />
</Provider>
`;
